--- a/Permit_App.csproj
+++ b/Permit_App.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="EPPlus" Version="7.6.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="System.Xml.Linq" Version="3.5.21022.801" />
   </ItemGroup>
 
   <ItemGroup>
